# allolib

./: .codedocs  .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  allosystem_diff.txt  api_changes.txt  compile.sh  distclean  example.sh  introduction.md  issues.txt  probe-4a87754eea3447fc8c83ee3b56ab81e2.txt  readme.md  run.sh  runf.sh  style_guide.txt  todo.txt  visualstudio.sh  warnings.txt  xcode.sh
audio_test/: CMakeLists.txt  main.cpp
cmake/single_file/: CMakeLists.txt
empty_project/: CMakeLists.txt  app_config.cmake  main.cpp
examples/: CMakeLists.txt  readme.md
examples/app/: app.cpp  app_recorder.cpp  audioApp.cpp  domains.cpp  newApp.cpp
examples/av/: audioToGraphics.cpp  helloVirtualWorld.cpp
examples/distributed/: audio.cpp  distributedApp.cpp  distributed_scene.cpp  mpi.cpp  omnirendering.cpp  platonics-distributed.cpp  two_scenes.cpp
examples/domain/: audioApp.cpp
examples/empty_project/: CMakeLists.txt  main.cpp
examples/flags/: flags.cmake
examples/graphics/: 2D.cpp  asset.cpp  cieColor.cpp  defaultShader.cpp  fbo.cpp  fbo_separate_gl.cpp  font.cpp  font_module.cpp  fontrenderer.cpp  frameFeedback.cpp  gnomon.cpp  image_io.cpp  img_module.cpp  instance_drawing.cpp  light.cpp  lighting.cpp  meshManyShape.cpp  meshSquare.cpp  mirror.cpp  offscreen.cpp  pickRay.cpp  platonics.cpp  point-cloud-geometry-shader-texture-sprite.cpp  pointCloud.cpp  renderDepthToTexture.cpp  renderToTexture.cpp  scissor.cpp  shapeGallery.cpp  texture.cpp  textureAlpha.cpp  textureImage.cpp  transformations.cpp  window_size.cpp
examples/imgui/: imgui.cpp  imgui_basic.cpp  imgui_example.cpp  minimal.cpp
examples/io/: OSC.cpp  OSCClient.cpp  OSCServer.cpp  OSC_app.cpp  appSimple.cpp  arduino.cpp  audioDevice.cpp  csvreader.cpp  event_handler.cpp  key_callbacks.cpp  listing_files.cpp  midiIn.cpp  midiInApp.cpp  persistentconfig.cpp  prettyVec.cpp  searchpath.cpp  serialin.cpp  sidebyside.cpp  sockets.cpp  windowDecoration.cpp  windowResizeCb.cpp
examples/math/: matrix.cpp  random.cpp  vector.cpp
examples/one-line-of-c/: README.md  flags.cmake  main.cpp
examples/openvr/: flags.cmake  openvr-app.cpp  openvr-pickables.cpp  openvr.cpp
examples/protocol/: commandserver.cpp
examples/scene/: distributed_scene.cpp  dynamic_scene.cpp  dynamic_scene2.cpp  rtPolySynth.cpp  scene_recorder.cpp  sort_by_distance.cpp  synthsequencer.cpp
examples/simulation/: flocking.cpp  gravityWell.cpp  levyFlight.cpp  particleSystem.cpp  waveEquation.cpp
examples/sound/: ambiPlayer.cpp  audioDevice.cpp  audioScene.cpp  filterExplorer.cpp  filter_explorer.cpp  gam_sine.cpp  gammaSine.cpp  guiAudioIO.cpp  iogui.cpp  lbap.cpp  metering.cpp  multiFilePlayer.cpp  probe.cpp  reverb.cpp  sound_file.cpp  soundfile.cpp  soundfile_selector.cpp  soundfilestreaming.cpp  spatialization.cpp  spatializationScene.cpp  speakerTest.cpp  stereoscene.cpp  vbap.cpp
examples/sound/soundfile/: al_SoundFile.cpp  al_SoundFile.hpp  al_SoundFile_headeronly.hpp
examples/spatial/: hashSpace.cpp
examples/sphere/: common.hpp  omnirendering.cpp  renderer.cpp  simulator.cpp
examples/system/: parallelThreads.cpp  signal.cpp  thread.cpp  threadPeriodic.cpp
examples/toml/: toml.cpp
examples/ui/: app_server.cpp  avSequencer.cpp  bundle_server.cpp  controlgui.cpp  dialog.cpp  distributed_scene.cpp  dynamic_scene.cpp  dynamic_scene2.cpp  fileselector.cpp  gui_domain.cpp  htmlInterface.cpp  iogui.cpp  parameter.cpp  parameter_async_callback.cpp  parameter_hints.cpp  parameter_server.cpp  parameterbundle.cpp  parameterbundle_different.cpp  parameterbundle_presets.cpp  parametergui.cpp  parametergui2.cpp  parametermidi.cpp  parametersequencer.cpp  pickable.cpp  pickableManager.cpp  pickableRotateHandle.cpp  presetmaps.cpp  presets.cpp  presets_sync_morph.cpp  presetsgui.cpp  recorder.cpp  rtPolySynth.cpp  scene_recorder.cpp  sequencer.cpp  sequencergui.cpp  sequencergui_async.cpp  sequencergui_free.cpp  two_guis.cpp
examples/user_flags/: flags.cmake  main.cpp
examples/user_flags/extra/: drawing.hpp
fbo_test/: CMakeLists.txt  main.cpp
gl_test/: CMakeLists.txt  al_gl_test  main.cpp
mesh_test/: CMakeLists.txt  main.cpp
modules/app/: CMakeLists.txt
modules/app/src/app/: al_App.cpp  al_AppRecorder.cpp  al_AudioDomain.cpp  al_DistributedApp.cpp  al_GUIDomain.cpp  al_OSCDomain.cpp  al_OmniRendererDomain.cpp  al_StateDistributionDomain.cpp
modules/app/src/sphere/: al_PerProjection.cpp  al_SphereUtils.cpp
modules/audio/: CMakeLists.txt
modules/audio-rtaudio/: CMakeLists.txt
modules/audio-rtaudio/src/io/: al_AudioIO.cpp
modules/audio/backend/dummy/: CMakeLists.txt
modules/audio/backend/portaudio/: CMakeLists.txt
modules/audio/backend/rtaudio/: CMakeLists.txt
modules/audio/src/io/: al_AudioIOData.cpp
modules/audio/src/sound/: al_DownMixer.cpp
modules/config/: CMakeLists.txt
modules/config/src/io/: al_PersistentConfig.cpp  al_Toml.cpp
modules/core/system/: CMakeLists.txt
modules/core/types/: CMakeLists.txt
modules/domain/: CMakeLists.txt
modules/domain/src/core/: al_ComputationDomain.cpp  al_SimulationDomain.cpp
modules/domain/src/distribution/: al_OSCDomain.cpp  al_StateDistributionDomain.cpp
modules/graphics/: CMakeLists.txt
modules/imgui/: CMakeLists.txt
modules/io/: CMakeLists.txt
modules/io/src/io/: al_CSVReader.cpp  (+3 more)
modules/math/: CMakeLists.txt
modules/midi/: CMakeLists.txt
modules/protocol/midi/: CMakeLists.txt
modules/protocol/osc/: CMakeLists.txt
modules/serial/: CMakeLists.txt
modules/sound/: CMakeLists.txt
modules/spatial/: CMakeLists.txt
modules/ui/: CMakeLists.txt
modules/ui/parameter/: CMakeLists.txt
modules/ui/ui/: CMakeLists.txt
modules/util/sphere/: CMakeLists.txt
test/: CMakeLists.txt  al_test  gtest_presets.cpp  main.cpp
test/src/: main.cpp  test_audio.cpp  test_dynamicScene.cpp  test_dynamic_scene.cpp  test_file.cpp  test_lbap.cpp  test_math.cpp  test_mathSpherical.cpp  test_midi.cpp  test_osc.cpp  test_parameter_server.cpp  test_preset_sequencer.cpp  test_presets.cpp  test_speakers.cpp  test_vbap.cpp
(+911 files in other folders)
